added Lacan post

--- a/ai-kit-butler-performativity.html
+++ b/ai-kit-butler-performativity.html
@@ -16,7 +16,7 @@
       <a href="ai-hermeneutics-kit.html" class="quickkit-pill">← Back to AI Hermeneutics Kit</a>
     </div>
     <h1>Beyond the Author: The AI as a Performative Subject</h1>
-    <p>The most common Romantic objection to AI is that there is "no one there." We assume a human author is a stable, unified subject who exists before the act of writing. Judith Butler's philosophy, particularly in <em>Gender Trouble</em>, offers a radical challenge to this idea. She argues that the subject is not the cause of an act, but its effect. This reframes the entire problem of AI authorship.</p>
+    <p>The most common Romantic objection to AI is that there is "no one there." We assume a human author is a stable, unified subject who exists before the act of writing. Judith Butler's philosophy, particularly in <em>Gender Trouble</em>, gives us a radical challenge to this idea. She argues that the subject is not the cause of an act, but its effect. This reframes the entire problem of AI authorship.</p>
 
     <hr>
 
