--- a/ai-kit-butler-regulation.html
+++ b/ai-kit-butler-regulation.html
@@ -16,7 +16,7 @@
       <a href="ai-hermeneutics-kit.html" class="quickkit-pill">← Back to AI Hermeneutics Kit</a>
     </div>
     <h1>The Coherent Author as a Regulatory Fiction</h1>
-    <p>Why do we demand that a text have a single, coherent author behind it? The Romantic answer is that this author is the source of the text's authentic meaning. Foucault, with his concept of the <a href="ai-kit-author-function.html">author-function</a>, suggests it's a way to classify and control discourse. Judith Butler offers a third, complementary view: the coherent subject is a "regulatory fiction," a social norm we are compelled to perform to be seen as intelligible.</p>
+    <p>Why do we demand that a text have a single, coherent author behind it? The Romantic answer is that this author is the source of the text's authentic meaning. Foucault, with his concept of the <a href="ai-kit-author-function.html">author-function</a>, suggests it's a way to classify and control discourse. Judith Butler lays out a third, complementary view: the coherent subject is a "regulatory fiction," a social norm we are compelled to perform to be seen as intelligible.</p>
     
     <hr>
     
