--- a/ai-kit-deleuze-goodwill.html
+++ b/ai-kit-deleuze-goodwill.html
@@ -33,7 +33,7 @@
 
     <section>
       <h2>AI and the End of Goodwill</h2>
-      <p>This hints at a different lens for thinking about AI. The standard critique is that an AI cannot be an author because it cannot offer genuine goodwill; it is the ultimate "bullshit machine" that mimics intimacy without sincerity. A Deleuzian reading flips this on its head.</p>
+      <p>This hints at a different lens for thinking about AI. The standard critique is that an AI cannot be an author because it cannot approach anyone with genuine goodwill; it is the ultimate "bullshit machine" that mimics intimacy without sincerity. A Deleuzian reading flips this on its head.</p>
       <p>The AI’s lack of goodwill is not its failure, but its most philosophically interesting quality. It literalizes the condition of all writing. By having no "self" to befriend us with, it forces us out of the Romantic trap. It makes it impossible to pretend we are communing with a soul. We are left with what was always there: a linguistic system that generates patterns.</p>
       <p>The problem, for Deleuze, was never that a machine might one day learn to write. The problem was that philosophy had for centuries been acting as if the human author wasn't a kind of machine all along. By rejecting goodwill, Deleuze clears the ground for a philosophy that no longer needs the illusion of the unified subject, a philosophy prepared for a world of authorless, machinic texts.</p>
     </section>
