--- a/ai-kit-interpretive-dialogue.html
+++ b/ai-kit-interpretive-dialogue.html
@@ -33,7 +33,7 @@
 
     <section>
       <h2>Wolfgang Iser and the "Implied Reader"</h2>
-      <p>Coming from a different field known as reader-response theory, Wolfgang Iser offered a complementary concept. He argued that literary texts contain an "implied reader"—a role or a set of perspectives that the actual reader must inhabit to make sense of the work. The text itself contains a "script" or a series of "gaps" that the reader must fill in, forcing them to become an active co-creator of the work's meaning.</p>
+      <p>Coming from a different field known as reader-response theory, Wolfgang Iser developed a complementary concept. He argued that literary texts contain an "implied reader"—a role or a set of perspectives that the actual reader must inhabit to make sense of the work. The text itself contains a "script" or a series of "gaps" that the reader must fill in, forcing them to become an active co-creator of the work's meaning.</p>
       <p>For Iser, the text actively guides and manipulates the reader's imagination and interpretive process. We do not simply read a novel; we perform the role of the reader that the novel demands. This act of performance shapes our experience and understanding, another way in which the text actively interprets and molds its interpreter.</p>
     </section>
     
