--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header data-template="header">
-    <h1><a href="index.html">Professor Plate's Notebook</a></h1>
-</header>
+    <header class="site-header">
+      <h1><a href="index.html">Professor Plate's Notebook</a></h1>
+      <nav class="top-links">
+        <a class="quickkit-pill" href="romantic-quick-kit.html" aria-label="Romantic Quick Kit">
+          Romantic Quick Kit
+        </a>
+        <a class="quickkit-pill" href="ai-hermeneutics-kit.html" aria-label="AI Hermeneutics Kit">
+          AI Hermeneutics Kit
+        </a>
+      </nav>
+    </header>
     <main>
         <div class="kit-cards-container">
             <section class="quickkit-card">
@@ -25,6 +33,7 @@
 
         <nav>
             <ul>
+                <li><a href="post70.html">70 The Parasite in the Machine is the Ghost in the Self: A Lacanian Reading of Elan Barenholtz</a></li>
                 <li><a href="post69.html">69 The Expert's Anxiety</a></li>
                 <li><a href="post68.html">68 The Unauthorized Exorcist and the Wicked Preacher</a></li>
                 <li><a href="post67.html">67 Appropriating the Gold of the Machines</a></li>
