--- a/romantic-kit-authenticity.html
+++ b/romantic-kit-authenticity.html
@@ -35,7 +35,7 @@
 
     <h2>Authenticity as a Process: The Theodicy of the Self</h2>
     <p>The quest for authenticity was more than a stylistic preference; it was a profound spiritual project. Many Romantic works are a form of secular "theodicy," an attempt to justify the ways of the world to the individual mind. Where Milton sought to "justify the ways of God to men," a poet like Wordsworth sought to justify the experience of loss and suffering as essential to the growth of his own mind.</p>
-    <p>Authenticity, in this view, is earned. It is the wisdom achieved by one who has journeyed through what Keats called the <a href="https://lewisiana.nl/painquotes/keats-on-soul-making.pdf">"vale of Soul-making."</a> The authentic self is not the innocent self, but the self that has fallen into division and despair, and has re-forged its identity on a higher level of consciousness. The suffering is justified because it creates a more profound, more resilient, and more complete individual.</p>
+    <p>Authenticity, in this view, is earned. It is the wisdom achieved by one who has journeyed through what Keats called the <a href="https://lewisiana.nl/painquotes/keats-on-soul-making.pdf">"vale of Soul-making."</a> The authentic self is not the innocent self, but the self that has fallen into division and despair, and has re-created its identity on a higher level of consciousness. The suffering is justified because it creates a more profound, more resilient, and more complete individual.</p>
     
     <h3>Further Reading (Open Sources & Scholarship)</h3>
     <ul>
