--- a/post59.html
+++ b/post59.html
@@ -54,13 +54,13 @@
       <p>A hermeneutics of suspicion looks at the most emotional parts of the "Hero" video, the tender moments between father and daughter, and asks, "What function does this sentimentality serve?" The answer is that it works to conceal a harsh reality. The video presents the cowboy's dangerous, low-wage labor and fractured family life not as a systemic problem, but as the backdrop for a personal, emotional journey.</p>
       <ul>
           <li><strong>The Ideological Mask:</strong> The story of a father's love becomes an ideological mask. It reframes economic precarity as a noble, character-building struggle. We are encouraged to feel sympathy for the individual, which prevents us from feeling anger at the system that creates these conditions. The "heroism" is in his personal endurance, not in any collective effort to change the world.</li>
-          <li><strong>The Projected World:</strong> The "world of the text" here is one in which systemic failures can be redeemed by individual sincerity and paternal love. It's a world where a quiet moment sharing ice cream is presented as a sufficient answer to a life of physical risk and financial instability. A suspicious reading argues this is a dangerous and politically conservative fantasy. It pacifies the viewer, offering an emotional resolution to a problem that is fundamentally economic and political.</li>
+          <li><strong>The Projected World:</strong> The "world of the text" here is one in which systemic failures can be redeemed by individual sincerity and paternal love. It's a world where a quiet moment sharing ice cream is presented as a sufficient answer to a life of physical risk and financial instability. A suspicious reading argues this is a dangerous and politically conservative fantasy. It pacifies the viewer. It promises to be an emotional resolution to a problem that is fundamentally economic and political.</li>
       </ul>
       <p>Where the Romantic reading finds a deep, authentic soul, the Ricoeurian reading finds a deep, effective ideology. The video's "surplus meaning" is not a glimpse into the human spirit, but a lesson in how culture uses the language of authenticity to neutralize social critique. The video isn't just a story; it's a machine for producing consent. The Romantic is moved by it. The suspicious interpreter asks who benefits from them being moved.</p>
 
       <hr>
     
-      <p class="series-note">This post serves as a practical capstone to the <em>"Reconsidering the Romantics"</em> series, demonstrating both the power of the Romantic method and the sharp critiques offered by other hermeneutic traditions.</p>
+      <p class="series-note">This post serves as a practical capstone to the <em>"Reconsidering the Romantics"</em> series, demonstrating both the power of the Romantic method and the sharp critiques developed by other hermeneutic traditions.</p>
       <p><a href="index.html">Home</a> | <a href="post58.html">Previous Post</a> | <a href="post60.html">Next Post</a></p>
     </article>
   </main>
