--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         <nav>
             <ul>
-                <li><a href="post70.html">70 The Parasite in the Machine is the Ghost in the Self: A Lacanian Reading of Elan Barenholtz</a></li>
+                <li><a href="post70.html">70 The Parasite in the Machine: A Lacanian Reading of Elan Barenholtz</a></li>
                 <li><a href="post69.html">69 The Expert's Anxiety</a></li>
                 <li><a href="post68.html">68 The Unauthorized Exorcist and the Wicked Preacher</a></li>
                 <li><a href="post67.html">67 Appropriating the Gold of the Machines</a></li>
