--- a/post70.html
+++ b/post70.html
@@ -21,7 +21,7 @@
     </header>
     <main>
         <article>
-            <h2>70 The Parasite in the Machine is the Ghost in the Self: A Lacanian Reading of Elan Barenholtz</h2>
+            <h2>70 The Parasite in the Machine: A Lacanian Reading of Elan Barenholtz</h2>
             
             <p>So I've been mapping a conflict in this notebook. Our collective anxiety over AI, I've argued, is a new playing-out of an intellectual battle between a Romantic worldview, which prizes the authentic, unified soul, and a structuralist worldview, which sees us as hosts for impersonal systems. This may not be just a battle between two theories. The impersonal system may be something we can now observe directly.</p>
             
