--- a/romantic-quick-kit.html
+++ b/romantic-quick-kit.html
@@ -20,7 +20,7 @@
       <p>The concepts in this kit are interconnected. Many Romantic writers and thinkers shared a central story: a journey that begins in a state of primal unity, falls into a painful state of division and alienation, and concludes by returning home to a higher, more self-aware state of integration. Think of it as a great circle or spiral. The pages below explore the key features of this journey.</p>
       <ul>
         <li>Use the Hermeneutics page as your reading method; the other pages are what to look for as you read.</li>
-        <li>Every page links out to public sources so you can dive deeper without a paywall.</li>
+        <li>Every page links out to sources you can look into further.</li>
       </ul>
 
       <nav class="toc">
