--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
         <nav>
             <ul>
+                <li><a href="post71.html">71 Schleiermacher's Divided Self: A Romantic Who Knew We Weren't Whole</a></li>
                 <li><a href="post70.html">70 The Parasite in the Machine: A Lacanian Reading of Elan Barenholtz</a></li>
                 <li><a href="post69.html">69 The Expert's Anxiety</a></li>
                 <li><a href="post68.html">68 The Unauthorized Exorcist and the Wicked Preacher</a></li>
