--- a/post71.html
+++ b/post71.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Schleiermacher's Divided Self: A Romantic Who Knew We Weren't Whole</title>
+    <title>Post 71 - Professor Plate's Notebook</title>
     <link rel="stylesheet" href="style.css"> <!-- Assuming a stylesheet named style.css -->
 </head>
 <body>
