--- a/post72.html
+++ b/post72.html
@@ -273,6 +273,8 @@
             </ol>
             <p>This approach will allow me to use the curated passages as a map, transforming what can be a disorienting experience into a guided exploration of one of the most powerful and creative philosophical projects of the 20th century.</p>
             
+            <h4>A final little question: is there a version of this motivated by love for the system and everyone living in it? Is there a version of this that is being in the world but not of the world? Is that a version of the analogy?</h3>
+
             <p><a href="index.html">Home</a> | <a href="post71.html">Previous Post</a> | <a href="post73.html">Next Post</a></p>
         </article>
     </main>
