added gefuhl all over

--- a/romantic-kit-hermeneutics.html
+++ b/romantic-kit-hermeneutics.html
@@ -27,7 +27,7 @@
     <p>Every act of interpretation requires two parallel lines of inquiry. You must hold both in tension.</p>
     <ul>
       <li>The <strong>Grammatical Side</strong> (The System): Analyze the text as a product of a shared system. Look for the rules it follows: the language, genre conventions, historical context, and formal structures. This is the common ground, the public dimension of the work.</li>
-      <li>The <strong>Psychological Side</strong> (The Singular Practice): Analyze the text as the product of a singular mind. Trace its unique habits, recurring choices, and specific deviations from the grammatical template. This isn't about amateur psychoanalysis; it's about reconstructing the <em>textual evidence</em> of a particular style or consciousness.</li>
+      <li>The <strong>Psychological Side</strong> (The Singular Practice): Analyze the text as the product of a singular mind. Trace its unique habits, recurring choices, and specific deviations from the grammatical template. This isn't about amateur psychoanalysis; it's about reconstructing the <em>Keimentschluß</em> or "seminal decision," the originating impulse where the author's foundational feeling (<em>Gefühl</em>) took on a specific direction and became a concrete, generative idea.</li>
     </ul>
 
     <h3>2. Turn the Hermeneutic Circle</h3>
@@ -37,7 +37,7 @@
     </ul>
 
     <h3>3. Make a Disciplined “Divinatory” Leap</h3>
-    <p>At some point, analysis isn't enough. You must make an imaginative, hypothesis-driven leap. Schleiermacher called this the <em>"divinatory" method</em> (from the French <em>deviner</em>, to guess). It's an intuitive guess about the organizing intention or creative act that could have produced this specific text. This isn't mysticism; it's a disciplined hypothesis that must be constantly tested against the textual evidence gathered from the two rails and the hermeneutic circle.</p>
+    <p>At some point, analysis isn't enough. You must make an imaginative, hypothesis-driven leap. Schleiermacher called this the <em>"divinatory" method</em> (from the French <em>deviner</em>, to guess). It's an intuitive guess about the organizing intention or creative act that could have produced this specific text. This isn't mysticism; it is itself an act of <em>Gefühl</em>, an immediate, feeling-based grasp of another's inner life. This disciplined hypothesis must then be constantly tested against the textual evidence gathered from the two rails and the hermeneutic circle.</p>
 
     <h3>4. Listen for the Surplus Meaning</h3>
     <p>Finally, listen for what exceeds the author’s apparent intent. The critic Friedrich Schlegel argued that great works often "aim at more than [they] know," carrying "unconscious meanings." Look for productive contradictions, unintended ironies, and patterns that reveal the hidden assumptions of a historical moment. This surplus is where the most vital interpretation often begins.</p>
@@ -48,7 +48,7 @@
     <p>This is where the interpretive method and the literary subject become one. In a work like William Wordsworth's epic poem <em>The Prelude</em>, the poet acts as his own hermeneuticist. He looks back at the "text" of his own past and uses the hermeneutic circle to understand how the "parts" of his life (specific memories or "spots of time") fit into the "whole" of his mature poetic identity. The act of writing the poem becomes the very act of achieving the self-understanding it describes.</p>
     
     <h2>The Goal of Interpretation</h2>
-    <p>Schleiermacher’s most audacious claim is that the goal of this method is to understand an author "better than he understood himself." This is not a claim to superior intellect, but a statement about the nature of interpretation. The critic’s task is to make explicit the implicit patterns—the intuitive stylistic habits and unconscious assumptions—that the author followed in the act of creation. Interpretation is not merely a replication of the author's thoughts; it is an act of illumination that reveals the full, and often surplus, meaning of the work itself.</p>
+    <p>Schleiermacher’s most audacious claim is that the goal of this method is to understand an author "better than he understood himself." This is not a claim to superior intellect, but a statement about the nature of interpretation. The critic’s task is to make explicit the implicit patterns, the intuitive stylistic habits and unconscious assumptions, that the author followed in the act of creation. Interpretation is not merely a replication of the author's thoughts; it is an act of illumination that reveals the full, and often surplus, meaning of the work itself.</p>
 
     <h3>Go Deeper (Open Sources & Scholarship)</h3>
     <ul>
