--- a/romantic-kit-organic-form.html
+++ b/romantic-kit-organic-form.html
@@ -23,7 +23,7 @@
     <p>This distinction was most famously articulated by Samuel Taylor Coleridge, who drew heavily on German thinkers like A. W. Schlegel.</p>
     <ul>
       <li><strong>Mechanical Form:</strong> Form is imposed on the material from the outside, like a cookie-cutter on dough. The rules are pre-determined and generic. The result is predictable and lifeless.</li>
-      <li><strong>Organic Form:</strong> Form is innate. It "shapes, as it develops, itself from within." Like a plant from a seed, the form grows out of the work's specific content and purpose. The parts and the whole are interdependent; you cannot change one without altering the other.</li>
+      <li><strong>Organic Form:</strong> Form is innate. It "shapes, as it develops, itself from within." This development begins from the <em>Keimentschluß</em>, or "seminal decision," which acts as the 'seed' from which the entire work organically grows. Like a plant, the form grows out of the work's specific content and purpose. The parts and the whole are interdependent; you cannot change one without altering the other.</li>
     </ul>
     <p>In the terms of our <a href="romantic-kit-hermeneutics.html">hermeneutic method</a>, a work has organic form when its <strong>grammatical</strong> structure (its language, genre, and shape) is a necessary and unique consequence of its singular <strong>psychological</strong> vision.</p>
     
